# cpp_cmake_template

./: .gitmodules  CMakeLists.txt
include/: foo.h
main/: main.cpp  main1.cpp  main2.cpp
src/: foo.cpp
tests/: CMakeLists.txt  unittests.cpp
